--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ dependencies = [
     "sqlalchemy (==2.0.6)",
     "scikit-learn (==1.3.2)",
     "statsmodels (>=0.14.0)",
-    "pyportfolioopt (==1.5.0)",
     "riskfolio-lib (==7.0.1)",
     "cvxpy (==1.6.5)",
     "ecos (==2.0.14)",
@@ -55,4 +54,6 @@ flake8 = "^7.2.0"
 pylint = "^3.3.7"
 pytest = "^8.3.5"
 autoflake = "^2.3.1"
+pytest-cov = "^6.1.1"
+pyportfolioopt = "1.4.1"
 
