--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "yfinance (>=0.2.61,<0.3.0)",
     "alpha-vantage (>=3.0.0,<4.0.0)",
     "snownlp (>=0.12.3,<0.13.0)",
-    "psutil (>=7.0.0,<8.0.0)"
+    "psutil (>=7.0.0,<8.0.0)",
+    "pyarrow (>=20.0.0,<21.0.0)"
 ]
 
 
