--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,15 @@ dependencies = [
     "alpha-vantage (>=3.0.0,<4.0.0)",
     "snownlp (>=0.12.3,<0.13.0)",
     "psutil (>=7.0.0,<8.0.0)",
-    "pyarrow (>=20.0.0,<21.0.0)"
+    "pyarrow (>=20.0.0,<21.0.0)",
+    "backtrader (>=1.9.76,<2.0.0)",
+    "tensorflow (>=2.15.0,<3.0.0)",
+    "torch (>=2.0.0,<3.0.0)",
+    "mlflow (>=2.10.0,<3.0.0)",
+    "shap (>=0.44.0,<0.45.0)",
+    "lime (>=0.2.0,<0.3.0)",
+    "xgboost (>=2.0.0,<3.0.0)",
+    "lightgbm (>=4.1.0,<5.0.0)"
 ]
 
 
