--- a/config/docker/docker-compose-elk.yml
+++ b/config/docker/docker-compose-elk.yml
@@ -26,8 +26,8 @@ services:
     image: docker.elastic.co/logstash/logstash:7.14.0
     container_name: logstash
     volumes:
-      - ./src/logging/logstash/pipeline:/usr/share/logstash/pipeline
-      - ./src/logging/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ../../src/logging/logstash/pipeline:/usr/share/logstash/pipeline
+      - ../../src/logging/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
     ports:
       - "5044:5044"
       - "5000:5000/tcp"
@@ -57,8 +57,8 @@ services:
     image: docker.elastic.co/beats/filebeat:7.14.0
     container_name: filebeat
     volumes:
-      - ./src/logging/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - ./logs:/logs:ro
+      - ../../src/logging/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - ../../logs:/logs:ro
       - filebeat_data:/usr/share/filebeat/data
     environment:
       - ELASTICSEARCH_HOSTS=elasticsearch:9200
