--- a/config/docker/docker-compose-loki.yml
+++ b/config/docker/docker-compose-loki.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "3100:3100"
     volumes:
-      - ./src/logging/loki/loki-config.yml:/etc/loki/local-config.yaml
+      - ../../src/logging/loki/loki-config.yml:/etc/loki/local-config.yaml
       - loki_data:/loki
     command: -config.file=/etc/loki/local-config.yaml
     networks:
@@ -17,8 +17,8 @@ services:
     image: grafana/promtail:2.4.0
     container_name: promtail
     volumes:
-      - ./src/logging/loki/promtail-config.yml:/etc/promtail/config.yml
-      - ./logs:/logs
+      - ../../src/logging/loki/promtail-config.yml:/etc/promtail/config.yml
+      - ../../logs:/logs
     command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
@@ -35,7 +35,7 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
-      - ./src/logging/loki/grafana/provisioning:/etc/grafana/provisioning
+      - ../../src/logging/loki/grafana/provisioning:/etc/grafana/provisioning
       - grafana_data:/var/lib/grafana
     networks:
       - loki
