fix: 修復CI/CD workflow中的腳本路徑引用
- 修正 .github/workflows/ci.yml 中的測試腳本路徑
- 將 src.scripts.run_tests 改為 scripts/run_tests.py
- 確保所有測試階段使用正確的腳本路徑
- 驗證所有引用的腳本檔案都存在

修復內容:
- 單元測試路徑修正
- 整合測試路徑修正
- E2E測試路徑修正

Related: PR #1 CI/CD路徑問題修復

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           poetry install
       - name: Run unit tests with coverage
         run: |
-          poetry run python -m src.scripts.run_tests --unit-tests --coverage --min-coverage 80
+          poetry run python scripts/run_tests.py --unit-tests --coverage --min-coverage 80
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -67,7 +67,7 @@ jobs:
           poetry install
       - name: Run integration tests
         run: |
-          poetry run python -m src.scripts.run_tests --integration-tests
+          poetry run python scripts/run_tests.py --integration-tests
 
   e2e-tests:
     name: End-to-End Tests
@@ -86,7 +86,7 @@ jobs:
           poetry install
       - name: Run end-to-end tests
         run: |
-          poetry run python -m src.scripts.run_tests --e2e-tests
+          poetry run python scripts/run_tests.py --e2e-tests
 
   security-tests:
     name: Security Tests
